# codexlr8

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SKILL.md  plan.md  pyproject.toml
.github/workflows/: release.yml  test.yml
demo/: main.py
demo/auth/: __init__.py  permissions.py  session.py
demo/cart/: cart.py
demo/models/: user.py
demo/payments/: gateway.py  processor.py
demo/tests/: test_auth.py  test_cart.py
demo/utils/: __init__.py
skills/: codexlr8-skill.md
src/codexlr8/: __init__.py  cli.py  config.py  embeddings.py  eval.py  mcp_server.py  meta.py  scanner.py  search.py  train.py
tests/: conftest.py  test_eval.py  test_mcp_server.py  test_meta.py  test_scanner.py  test_search.py
